--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -9,12 +9,12 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='main.css')}}">
-    {% if title %}
-    <title>Flask Blog - {{title}}</title>
-    {% else %}
-    <title>Flask Blog</title>
-    {% endif %}
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static', filename='main.css') }}"
+    />
+    <title>Flask Blog - {{ title or 'Flask Blog' }}</title>
   </head>
   <body>
     <header class="site-header">
@@ -24,8 +24,8 @@
           <button
             class="navbar-toggler"
             type="button"
-            data-toggle="collapse"
-            data-target="#navbarToggle"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarToggle"
             aria-controls="navbarToggle"
             aria-expanded="false"
             aria-label="Toggle navigation"
@@ -37,57 +37,63 @@
               <a class="nav-item nav-link" href="/">Home</a>
               <a class="nav-item nav-link" href="/about">About</a>
             </div>
-            <!-- Navbar Right Side -->
             <div class="navbar-nav">
-              <a class="nav-item nav-link" href="/login">Login</a>
-              <a class="nav-item nav-link" href="/register">Register</a>
+              {% if current_user.is_authenticated %}
+              <a class="nav-item nav-link" href="{{ url_for('new_post') }}"
+                >New Post</a
+              >
+              <a class="nav-item nav-link" href="{{ url_for('account') }}"
+                >Account</a
+              >
+              <a class="nav-item nav-link" href="{{ url_for('logout') }}"
+                >Logout</a
+              >
+              {% else %}
+              <a class="nav-item nav-link" href="{{ url_for('main.login') }}"
+                >Login</a
+              >
+              <a class="nav-item nav-link" href="{{ url_for('main.register') }}"
+                >Register</a
+              >
+
+              {% endif %}
             </div>
           </div>
         </div>
       </nav>
     </header>
     <main role="main" class="container">
-  <div class="row">
-    <div class="col-md-8">
-      {% with messages = get_flashed_messages(with_categories=true) %}
-      {% if messages %}
-      {% for category, message in messages %}
-      <div class="alert alert-{{ category}}">
-        {{ message }}
+      <div class="row">
+        <div class="col-md-8">
+          {% with messages = get_flashed_messages(with_categories=true) %} {% if
+          messages %} {% for category, message in messages %}
+          <div class="alert alert-{{ category }}">{{ message }}</div>
+          {% endfor %} {% endif %} {% endwith %} {% block content %}{% endblock
+          %}
+        </div>
+        <div class="col-md-4">
+          <div class="content-section">
+            <h3>Our Sidebar</h3>
+            <p class="text-muted">
+              You can put any information here you'd like.
+            </p>
+            <ul class="list-group">
+              <li class="list-group-item list-group-item-light">
+                Latest Posts
+              </li>
+              <li class="list-group-item list-group-item-light">
+                Announcements
+              </li>
+              <li class="list-group-item list-group-item-light">Calendars</li>
+              <li class="list-group-item list-group-item-light">etc</li>
+            </ul>
+          </div>
+        </div>
       </div>
-      {% endfor %}
-      {% endif  %}
-      {% endwith %}
-      {% block content %}{% endblock %}
-    </div>
-    <div class="col-md-4">
-      <div class="content-section">
-        <h3>Our Sidebar</h3>
-        <p class='text-muted'>You can put any information here you'd like.
-          <ul class="list-group">
-            <li class="list-group-item list-group-item-light">Latest Posts</li>
-            <li class="list-group-item list-group-item-light">Announcements</li>
-            <li class="list-group-item list-group-item-light">Calendars</li>
-            <li class="list-group-item list-group-item-light">etc</li>
-          </ul>
-        </p>
-      </div>
-    </div>
-  </div>
-</main>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
   </body>
