--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -49,7 +49,7 @@
 <div class="border-top pt-3 mt-2">
   <small class="text-muted">
     Don't Have An Account?
-    <a class="ml-2 mt-2" href="{{ url_for('register') }}">Sign Up now</a>
+    <a class="ml-2 mt-2" href="{{ url_for('main.register') }}">Sign Up now</a>
   </small>
 </div>
 
